<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.escbooks.vendingmachine.VendingActivity">

    <TextView
        android:id="@+id/vending_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/select_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_product" />

    <!-- Wallet Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wallet_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_amount"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Stock / Purchase panel -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="#EEB910"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/snickers"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/stock_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snickers_stock"
            android:textSize="16sp" />

        <Button
            android:id="@+id/restock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restock" />

        <Button
            android:id="@+id/purchase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase" />

    </LinearLayout>

</LinearLayout>
